--- a/(FE)/css/Homepage.css
+++ b/(FE)/css/Homepage.css
@@ -67,7 +67,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: #47005f;
-    width: 1025px;
+    max-width: 100%;
     height: 500px;
     color: #fff;
     padding: 40px;
@@ -156,6 +156,7 @@
   }
 
   .carousel-image {
+    display: flex;
     transition: opacity 2s ease-in-out; /* Transisi smooth selama 1 detik */
     opacity: 1;
     position: absolute;
@@ -166,7 +167,9 @@
   }
 
   .overlay-box {
-    width: 488px;
+    display: flex;
+    width: 100%;
+    max-width: 487px;
     height: 500px;
     background-color: #B07FCC;
     position: absolute;
@@ -225,6 +228,9 @@
   }
 
   .all-produk{
+    display: inline-block;
+    align-items: center;
+    position: relative;
     padding: 10px 50px;
     border: rgb(25, 2, 94);
     background-color: #9a42e1;
