--- a/(FE)/css/aboutus.css
+++ b/(FE)/css/aboutus.css
@@ -62,6 +62,44 @@ nav a:hover {
     color: #555;
 }
 
+.dropdown {
+  display: none; 
+  position: relative;
+}
+
+.dropdown-btn {
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  padding: 5px;
+  cursor: pointer;
+  display: none; /* Tersembunyi pada layar besar */
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+  width: 150px;
+  z-index: 100;
+}
+
+.dropdown-menu a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  padding: 5px 0;
+}
+
+.dropdown-menu a:hover {
+  color: #6F4B9B;
+}
+
 /* Who we are Section */
 .who-we-are {
     display: flex;
@@ -243,7 +281,6 @@ nav a:hover {
     height: 300px;
     background-color: #333;
     color: #fff;
-    margin-top: 40px;
   }
   
   .footer-container {
@@ -337,4 +374,25 @@ nav a:hover {
     color: #aaa;
     margin-top: 70px;
     margin-left: 30px;
+  }
+  @media (max-width:900px) {
+    .navbar-center {
+      display: none; /* Sembunyikan menu utama */
+    }
+  
+    .dropdown {
+      display: block; /* Tampilkan dropdown */
+    }
+  
+    .dropdown-btn {
+      display: block; /* Tampilkan tombol dropdown */
+    }
+  
+    .dropdown-menu {
+      display: none; /* Default: sembunyikan menu dropdown */
+    }
+  
+    .dropdown.show .dropdown-menu {
+      display: block; /* Tampilkan menu dropdown saat dropdown aktif */
+    }
   }
