--- a/(FE)/css/detail.css
+++ b/(FE)/css/detail.css
@@ -95,18 +95,18 @@
 
 .content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 80px;
 }
 
 .box {
   display: flex;
-  width: 1300px; 
+  width: 100%;
 }
 
 .pic {
-  width: 450px;
-  height: 520px;
+  width: 400px;
+  height: 350px;
   margin-right: 20px;
   border-radius: 8px; 
 }
@@ -114,7 +114,6 @@
 .product {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   margin-left: 50px;
   width: 100%;
 }
@@ -132,30 +131,6 @@
   font-size: 24px;
 }
 
-.rating {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  font-size: 14px;
-  color: #333;
-}
-
-.rating-value {
-  font-size: 14px;
-  font-weight: 500;
-  color: #000;
-}
-
-.stars {
-  color: #FFD700; 
-  font-size: 14px;
-}
-
-.review-count {
-  font-size: 12px;
-  color: #888;
-}
-
 .viewer {
   font-size: 12px;
   color: #888;
@@ -167,8 +142,8 @@
   border-radius: 8px;
   padding: 15px;
   margin-top: 15px;
-  width: 650px;
-  height: 400px; 
+  width: 400px;
+  height: 200px; 
 }
 
 .text {
@@ -179,24 +154,22 @@
 .button-container {
   display: flex;
   flex-direction: row;
-  gap: 15px;
-  margin: 15px 200px;
+  gap: 60px;
+  margin: 15px;
 }
 
 .back { background-color:  #B384CE;
   font-family: 'Roboto', sans-serif;
   color: #ffffff;
-  width: 200px;
+  width: 150px;
   border-width: 1px;
   border-color: #000;
   border-radius: 8px;
   font-size: 15px;
   cursor: pointer;
   transition: opacity 0.20ms;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
   }
 
 .back:hover {
@@ -211,7 +184,7 @@
 .whatsapp{ background-color: rgb(7, 196, 76);
   font-family: 'Roboto', sans-serif;
   color: rgb(255, 255, 255);
-  width: 200px;
+  width: 150px;
   border-width: 1px;
   border-color: #000;
   border-radius: 8px;
@@ -219,7 +192,7 @@
   cursor: pointer;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 10px;
+  margin-left: 5px;
   }
   .whatsapp:hover {
     background-color: rgba(0, 154, 54, 0.798);
@@ -229,182 +202,6 @@
   .whatsapp:active {
     background-color: rgb(228, 220, 220);
   }
-
-  .review {
-   flex-direction: row;
-    width: 700px;
-    padding: 20px;
-    background-color: #fff;
-    margin-top: 50px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    gap: 4px;
-    margin-top: 50px;
-    color: #333;
-}
-
-.rating-box {
-  width: 240px;
-  float: left;
-  text-align: center;
-  justify-content: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  color: #333;
-  padding: 25px;
-  border: 1px solid #ddd;
-  border-radius: 20px;
-}
-
-.overall-rating {
-  display: flex;
-  align-items: baseline;
-  font-size: 40px;
-  color: #000;
-  margin-bottom: 10px;
-}
-
-.star-point {
-  color: #FFD700; 
-  font-size: 40px;
-  width: 50px;
-  margin-right: 5px;
-}
-.star {
-  color: #FFD700; /* Gold color for stars */
-  width: 30px;
-  margin-right: 5px;
-}
-
-.rating-number {
-  font-size: 50px;
-  font-weight: bold;
-}
-
-.out-of {
-  font-size: 20px;
-  color: #888;
-  margin-left: 2px;
-}
-
-.rating-satisfaction {
-  font-size: 14px;
-  color: #333;
-  margin: 5px 0;
-}
-
-.rating-count {
-  font-size: 12px;
-  color: #666;
-  margin-bottom: 15px;
-}
-
-.rating-distribution {
-  font-size: 12px;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.rating-distribution p {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 5px 0;
-}
-
-.bar {
-  flex: 1;
-  height: 5px;
-  background-color: #ddd;
-  margin: 0 8px;
-  border-radius: 3px;
-  overflow: hidden;
-}
-
-.filled-bar {
-  height: 100%;
-  background-color: #B384CE; /* Customize color as needed */
-}
-
-.rating-classification {
-  font-size: 14px;
-  color: #000;
-  margin-top: 15px;
-}
-
-.rating-classification p {
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.rating-classification label {
-  font-size: 14px;
-  color: #333;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-input[type="checkbox"] {
-  margin-right: 5px;
-}
-.user-experience {
-  width: 350px;
-  margin-left: 20px;
-}
-
-.user-review {
-  border-top: 1px solid #ddd;
-  padding: 10px 0;
-}
-
-.user-review:first-child {
-  border-top: none;
-}
-
-.user-stars {
-  font-size: 16px;
-  color: #FFD700; 
-  margin-bottom: 5px; 
-}
-
-.user-rating {
-  display: flex;
-  flex-direction:column;
-  align-items: justify;
-}
-
-.user-info {
-  flex-direction: row;
-  align-items: center;
-  gap: 10px; 
-  margin-bottom: 5px;
-}
-
-.profile-pic {
-  width: 40px; 
-  height: 40px;
-  border-radius: 50%; 
-  background-color: #ccc; 
-}
-
-.username {
-  font-weight: bold;
-  color: #333;
-  margin: 0;
-}
-
-.variant{
-  font-size: 12px;
-  color: #666;
-  margin: 2px 0;
-}
-
-.comment {
-  font-size: 14px;
-  color: #000000;
-  margin: 2px 0;
-}
 
 .footer {
   width: 100%;
@@ -481,7 +278,6 @@ input[type="checkbox"] {
   display: flex;
   flex-direction: row;
   gap: 10px;
-  margin-left: 550px;
   cursor: pointer;
   
 }
@@ -493,7 +289,6 @@ input[type="checkbox"] {
 .footer-social h4{
   font-size: 1.2rem;
   margin-top: 50px;
-  margin-left: 550px;
 }
 
 .footer-bottom {
@@ -504,7 +299,7 @@ input[type="checkbox"] {
   margin-top: 70px;
   margin-left: 30px;
 }
-@media (max-width:900px) {
+@media (max-width:1000px) {
   .navbar-center {
     display: none; /* Sembunyikan menu utama */
   }
@@ -523,6 +318,16 @@ input[type="checkbox"] {
 
   .dropdown.show .dropdown-menu {
     display: block; /* Tampilkan menu dropdown saat dropdown aktif */
+  }
+  .content{
+    flex-direction: column;
+  }
+  .product {
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    margin: 0;
+    width: 100%;
   }
 }
 
