--- a/(FE)/css/homepage2.css
+++ b/(FE)/css/homepage2.css
@@ -178,24 +178,19 @@ body {
 
 .footer-social .social-icons {
   display: flex;
-  position: absolute;
   gap: 10px;
   margin-top: 30px;
   margin-left: 350px;
   cursor: pointer;
+  align-items: center;
 }
 
-.facebook{
-  margin-left: 50px;
+.social-icons img{
+  width: 20px;
+  height: auto;
+  margin-left: 200px;
 }
 
-.instagram{
-  margin-left: 50px;
-}
-
-.envelope{
-  margin-left: 50px;
-}
 
 .footer-social h4{
   font-size: 1.2rem;
