--- a/(FE)/css/aboutus.css
+++ b/(FE)/css/aboutus.css
@@ -9,57 +9,52 @@ body {
     background-color: #ffffff;
 }
 
-/* Header Section */
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 40px;
-    border-bottom: 1px solid #ddd;
-    background-color: white;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: #fff;
+  position: relative;
 }
 
-.logo-section {
-    display: flex;
-    align-items: center;
+.navbar-left {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .logo {
-    width: 50px;
-    height: auto;
-    margin-right: 10px;
+  width: 40px;
+  height: auto;
 }
 
-.logo-text p {
-    font-family: 'Inter';
-    font-size: 12px;
-    margin: 0;
-    color: #333;
-    font-style: italic;
+.site-name {
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: #000;
 }
 
-.logo-text h1 {
-    font-family: 'Inter';
-    font-size: 18px;
-    margin: 0;
-    font-weight: bold;
-    color: #333;
+.navbar-center {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  flex: 1;
+  gap: 100px;
+  margin-right: 100px;
 }
 
-/* Style untuk tautan navigasi */
-nav a {
-    text-decoration: none;
-    color: black;
-    font-size: 14px;
-    font-weight: bold;
-    margin-left: 100px;
-    letter-spacing: 1px;
-    transition: color 0.3s;
-    font-family: 'Arial', sans-serif;
+.navbar-center a {
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1rem;
+  transition: color 0.2s;
 }
 
-nav a:hover {
-    color: #555;
+.navbar-center a:hover {
+  color: #6F4B9B;
 }
 
 .dropdown {
@@ -230,7 +225,6 @@ nav a:hover {
     align-items: center;
     padding: 60px 40px;
     background-color: #e8f7f3;
-*
 }
 
 .umkm-content {
