--- a/(FE)/css/homepage.css
+++ b/(FE)/css/homepage.css
@@ -62,6 +62,44 @@
     color: #6F4B9B;
   }
 
+  .dropdown {
+    display: none; 
+    position: relative;
+  }
+  
+  .dropdown-btn {
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    padding: 5px;
+    cursor: pointer;
+    display: none; /* Tersembunyi pada layar besar */
+  }
+  
+  .dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    list-style: none;
+    padding: 10px;
+    margin: 0;
+    width: 150px;
+    z-index: 100;
+  }
+  
+  .dropdown-menu a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    padding: 5px 0;
+  }
+  
+  .dropdown-menu a:hover {
+    color: #6F4B9B;
+  }
+
   .main-section {
     display: flex;
     align-items: center;
@@ -321,7 +359,6 @@
 
   .footer-social .social-icons {
     display: flex;
-    position: absolute;
     align-items: flex-start;
     gap: 10px;
     margin-top: 30px;
@@ -329,8 +366,10 @@
     cursor: pointer;
   }
 
-  .envelope{
-    margin-left: 50px;
+  .social-icons img{
+    width: 20px;
+    height: auto;
+    margin-left: 200px;
   }
 
   .footer-social h4{
