--- a/(FE)/css/homepage2.css
+++ b/(FE)/css/homepage2.css
@@ -62,6 +62,44 @@ body {
   color: #6F4B9B;
 }
 
+.dropdown {
+  display: none; 
+  position: relative;
+}
+
+.dropdown-btn {
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  padding: 5px;
+  cursor: pointer;
+  display: none; /* Tersembunyi pada layar besar */
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+  width: 150px;
+  z-index: 100;
+}
+
+.dropdown-menu a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  padding: 5px 0;
+}
+
+.dropdown-menu a:hover {
+  color: #6F4B9B;
+}
+
 .product-card {
   display: inline-block;
   max-width: 345px;
