--- a/(FE)/css/aboutus.css
+++ b/(FE)/css/aboutus.css
@@ -337,6 +337,7 @@ body {
 .footer-social {
   display: flex;
   flex-direction: column;
+  margin-left: 550px;
   gap: 10px;
   cursor: pointer;
 }
@@ -345,19 +346,17 @@ body {
   display: flex;
   flex-direction: row;
   gap: 10px;
-  margin-left: 550px;
   cursor: pointer;
   
 }
 .call .envelope{
   text-align: left;
-  margin-left: 50px;
+  margin-left: 550px;
 }
 
 .footer-social h4{
   font-size: 1.2rem;
   margin-top: 50px;
-  margin-left: 550px;
 }
 
 .footer-bottom {
@@ -369,34 +368,26 @@ body {
   margin-left: 30px;
 }
 
-/* Responsive for Mobile */
-/* Mobile Styles */
 /* Mobile Version */
 @media only screen and (max-width: 768px) {
-  .navbar {
-      flex-direction: column;
-      align-items: flex-start;
-  }
-
-  .navbar-left {
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 5px;
-  }
-
   .navbar-center {
-      display: none; /* Hide center navigation on small screens */
+    display: none; /* Sembunyikan menu utama */
   }
 
   .dropdown {
-      display: block; /* Show dropdown menu */
+    display: block; /* Tampilkan dropdown */
+  }
+
+  .dropdown-btn {
+    display: block; /* Tampilkan tombol dropdown */
   }
 
   .dropdown-menu {
-      display: block;
-      width: 100%;
-      padding: 10px 20px;
+    display: none; /* Default: sembunyikan menu dropdown */
   }
+
+  .dropdown.show .dropdown-menu {
+    display: block; /* Tampilkan menu dropdown saat dropdown aktif */
 
   .who-we-are {
       flex-direction: column;
